Reinstalled zoom plugin and fixed white space appearing on grid (a side-effect of normalize.css)

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,11 @@ h2 {
   margin-top: 245px;
 }
 
+p, 
+pre {
+  margin: 0;
+}
+
 .initial {
   top: 0; bottom: 0;
   vertical-align: middle;
